--- a/about.html
+++ b/about.html
@@ -28,12 +28,17 @@
     <p>Your photo</p>
 
 
-    <p>Provide us with:</p>
-    <p>Full name</p>
-    <p>Email</p>
-    <p>Message</p>               
+   
 
-    <p>Submit</p>
+<form action="/action_page.php">
+  <label for="fname">Full name:</label><br>
+  <input type="text" id="fname" name="fname" placeholder="Name"><br>
+  <label for="lname">Email:</label><br>
+  <input type="text" id="lname" name="lname" placeholder="example@ex.com"><br>
+  <label for="lname">Message:</label><br>
+  <input type="text" id="lname" name="lname" placeholder="What is in your mind"><br>
+  <input type="submit" value="Submit">
+</form> 
     
 </body>
 
