=ToDo list fixing

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <p>Your photo</p>
 
 
-   
+    <h2>Provide us with</h2>
 
 <form action="/action_page.php">
   <label for="fname">Full name:</label><br>
