--- a/index,.html
+++ b/index,.html
@@ -6,24 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ToDo</title>
+  <link rel="stylesheet" href="./style/css/style.css">
 </head>
 
 <body>
   <header>
-    <img src="/assets/DD.png">
-    <h1> Darsak </h1>
-    <p> <a href="./assets/Administrativestaff.html">Administrative staff</a></p>
-    <p> <a href="./assets/Teachers.html">Teachers</a></p>
+    <img src="/assets/DD.png" style="width: 5% ;height:5%">
+    <h1 id="nameofweb"> Darsak </h1>
+    <p id="nameofweb" class="center"> <a href="./assets/Administrativestaff.html">Administrative staff</a></p>
+    <p id="nameofweb" class="center"> <a href="./assets/Teachers.html">Teachers</a></p>
     <nav>
-      <ul>
-        <li> <a href="./index,.html">home</a></li>
-        <li> <a href="/about.html">About</a></li>
-      </ul>
+
+      <a style="margin-right: 600px;"> <a href="./index,.html">home</a></a>
+      <a style="margin-right: 100px;"> <a href="/about.html">About</a></a>
+
     </nav>
 
   </header>
 
-
+<h3 class="center">  ToDo List</h3>
   <style>
     table,
     th,
@@ -39,24 +40,24 @@
       <th>Status</th>
     </tr>
     <tr>
-      <td>Arabic</td>
-      <td>Done</td>
+      <td class="center">Arabic</td>
+      <td class="center" style="color: green;">Done</td>
     </tr>
     <tr>
-      <td>Math</td>
-      <td>Not done yet</td>
+      <td class="center">Math</td>
+      <td class="center" style="color: red;">Not done yet</td>
     </tr>
     <tr>
-      <td>English</td>
-      <td>Done</td>
+      <td class="center">English</td>
+      <td class="center" style="color: green;">Done</td>
     </tr>
   </table>
 
 
 
   <footer>
-    <p> &copy; 2022</p>
-    <p>location:Amman/khalda</p>
+    <p class="center"> &copy; 2022</p>
+    <p class="center">location:Amman/khalda</p>
 
   </footer>
 
