--- a/about.html
+++ b/about.html
@@ -6,39 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo</title>
+    <link rel="stylesheet" href="./style/css/style.css">
 </head>
 
 <body>
-
-
     <header>
-        <img src="/assets/DD.png">
-        <h1>Darsak </h1>
-        <p> <a href="./assets/Administrativestaff.html">Administrative staff</a></p>
-        <p> <a href="./assets/Teachers.html">Teachers</a></p>
+        <img src="/assets/DD.png" style=" width: 5%; height: 5%;" >
+        <h1 id="nameofweb"> Darsak </h1>
+        <p id="nameofweb" class="center"> <a href="./assets/Administrativestaff.html">Administrative staff</a></p>
+        <p id="nameofweb" class="center"> <a href="./assets/Teachers.html">Teachers</a></p>
         <nav>
-            <ul>
-                <li> <a href="./index,.html">home</a></li>
-                <li> <a href="/about.html">About</a></li>
 
-            </ul>
+            <a style="margin-right: 600px;"> <a href="./index,.html">Home</a></a>
+            <a style="margin-right: 100px;"> <a href="/about.html">About</a></a>
+
         </nav>
+
     </header>
 
     <main>
 
         <section>
-
-            <p>Name:..........</p>
-            <p>Teachers feedback:</p>
             <p>Your photo</p>
+            <img src="./assets/2.jpg" style="width: 10%; height: 10%">
+            <p class="center" style="color: red; margin-top: 5px; font-size: x-large;">Name:..........</p>
+            <p class="center" style="margin-top: 50px; margin-bottom: 50px; padding: 20px; border-color: black; border-width: 5px;border-style: dotted;">Teachers feedback:</p>
+
+
 
         </section>
 
         <section>
-            <h2>Provide us with</h2>
+            <h2 class="center">Provide us with</h2>
 
-            <form action="/action_page.php">
+            <form class="center" action="/action_page.php">
                 <label for="fname">Full name:</label><br>
                 <input type="text" id="fname" name="fname" placeholder="Name"><br>
                 <label for="lname">Email:</label><br>
@@ -51,8 +52,8 @@
         </section>
     </main>
     <footer>
-        <p> &copy; 2022</p>
-        <p>location:Amman/khalda</p>
+        <p class="center"> &copy; 2022</p>
+        <p class="center">location:Amman/khalda</p>
 
     </footer>
 </body>
