--- a/about.html
+++ b/about.html
@@ -12,9 +12,11 @@
 <body>
     <header>
         <img src="/assets/DD.png" style=" width: 5%; height: 5%;" >
-        <h1 id="nameofweb"> Darsak </h1>
-        <p id="nameofweb" class="center"> <a href="./assets/Administrativestaff.html">Administrative staff</a></p>
-        <p id="nameofweb" class="center"> <a href="./assets/Teachers.html">Teachers</a></p>
+        <br>
+        <a style="padding-left: 1225px; margin-bottom: 100px; font-size: xx-large;"> Darsak <a>
+        <br>
+        <a id="nameofweb" class="center" style="margin-right: 1050px;"> <a href="./assets/Administrativestaff.html">Administrative staff</a></a>
+        <a id="nameofweb" class="center" style="margin-right: 50px;"> <a href="./assets/Teachers.html">Teachers</a></a>
         <nav>
 
             <a style="margin-right: 600px;"> <a href="./index,.html">Home</a></a>
@@ -27,9 +29,9 @@
     <main>
 
         <section>
-            <p>Your photo</p>
-            <img src="./assets/2.jpg" style="width: 10%; height: 10%">
-            <p class="center" style="color: red; margin-top: 5px; font-size: x-large;">Name:..........</p>
+            <p id="flex-container">Your photo</p>
+            <img id="flex-container" src="./assets/2.jpg" style="width: 10%; height: 10%">
+            <a class="center" id="flex-container" style="color: red; font-size: x-large; margin-left: 550px;">Name:..........</a>
             <p class="center" style="margin-top: 50px; margin-bottom: 50px; padding: 20px; border-color: black; border-width: 5px;border-style: dotted;">Teachers feedback:</p>
 
 
