--- a/index,.html
+++ b/index,.html
@@ -7,14 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ToDo</title>
   <link rel="stylesheet" href="./style/css/style.css">
+  <script src="./app.js"></script>
 </head>
 
 <body>
   <header>
     <img src="/assets/DD.png" style="width: 5% ;height:5%">
-    <h1 id="nameofweb"> Darsak </h1>
-    <p id="nameofweb" class="center"> <a href="./assets/Administrativestaff.html">Administrative staff</a></p>
-    <p id="nameofweb" class="center"> <a href="./assets/Teachers.html">Teachers</a></p>
+    <br>
+    <a style="padding-left: 1225px; margin-bottom: 50%; font-size: xx-large;"> Darsak <a>
+      <br>
+    <a id="nameofweb" class="center" style="margin-right: 1050px;"> <a href="./assets/Administrativestaff.html">Administrative staff</a></a>
+    <a id="nameofweb" class="center" style="margin-right: 50px;"> <a href="./assets/Teachers.html">Teachers</a></a>
     <nav>
 
       <a style="margin-right: 600px;"> <a href="./index,.html">home</a></a>
